--- a/notebooks/11.02_vitaskär.ipynb
+++ b/notebooks/11.02_vitaskär.ipynb
@@ -39,7 +39,8 @@
     "%autoreload 2\n",
     "\n",
     "from d2e2f.visualization.visualize import plot_map, plot_trips\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -144,6 +145,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8adface5-0769-4967-9a69-923fcd241c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.hist('cog')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e307499-734b-4095-b0a9-c082239f156a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cog'].quantile(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f656bb-6ba9-46a3-bff1-a2877315ff53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx_mean = np.cos(np.deg2rad(df['cog']).quantile(0.5))\n",
+    "dy_mean = np.sin(np.deg2rad(df['cog']).quantile(0.5))\n",
+    "np.mod(np.rad2deg(np.arctan2(dy_mean, dx_mean)), 360)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5fda7546-774b-49d3-81b1-e99ffca26bba",
    "metadata": {},
@@ -159,7 +192,7 @@
    "outputs": [],
    "source": [
     "trips = df.groupby('trip_no')\n",
-    "trip_no = list(trips.groups.keys())[1]\n",
+    "trip_no = list(trips.groups.keys())[100]\n",
     "trip = trips.get_group(trip_no)\n",
     "\n",
     "trip.head()"
@@ -172,7 +205,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_map(trip)"
+    "plot_map(trip, zoom_start=13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af5e0fa0-2b76-48c1-93fb-29ba73c3027d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip.plot(y='cog')"
    ]
   },
   {
@@ -233,6 +276,14 @@
    "source": [
     "df_statistics.hist(column='sog', bins=100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8ba4f27-e916-42da-bf57-0eecd95b3cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
