--- a/docs/vitaskär/07.04_vitaskär_savings.ipynb
+++ b/docs/vitaskär/07.04_vitaskär_savings.ipynb
@@ -322,7 +322,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trips = catalog.load(\"vitaskar.data_with_trip_columns\")"
+    "trips = catalog.load(\"vitaskar.data_with_trip_columns\")\n",
+    "harbours = catalog.load(\"params:vitaskar.harbours\")\n",
+    "initial_speed_separator = catalog.load(\"params:initial_speed_separator\")"
    ]
   },
   {
@@ -547,7 +549,259 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scipy.integrate.cumtrapz(y=trips['sog'],"
+    "harbours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30e8fed-69ff-4fc9-904f-281b86d04af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "harbour = harbours['Norgersund']\n",
+    "latitude = harbour[0]\n",
+    "longitude = harbour[1]\n",
+    "\n",
+    "trips['distance to Norgersund'] = np.sqrt((trips.latitude - latitude)**2 + (trips.longitude - longitude)**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4c657f9-d00f-4a57-b213-1263df7db888",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip = trips.groupby(by='trip_no').get_group(100)\n",
+    "plot_map(trip, zoom_start=13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "912129f4-a8fc-4230-a0d3-9845f78ffe07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip.plot(y='distance to Norgersund')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e05d392c-ae3f-43bb-976b-5f1d2f58cbd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cc77f4a-565f-46fd-9d22-b8e20f04696c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_limit = 0.0004\n",
+    "mask = trips['distance to Norgersund'] < distance_limit\n",
+    "plot_trips(trips.loc[mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08756c95-3a32-418f-997a-d80f2b8a460b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.roll(distance, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a867da0f-03df-418a-85d2-3e937cb144ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b072c9c4-a277-4d2e-9257-c66835a1586c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66507634-1a0b-45bc-b908-44c6fd5a689e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c583b27-5a96-4b50-b4b8-499381c1ac53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 5\n",
+    "distance = trips['distance to Norgersund']\n",
+    "\n",
+    "M = np.concatenate([[np.roll(distance,-i)] for i in range(N,1,-1)])\n",
+    "average_previous_distance = M.mean(axis=0)\n",
+    "\n",
+    "mask = ((distance <= distance_limit) & (average_previous_distance > distance_limit))\n",
+    "entering = trips.loc[mask]       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83b6c8a3-f2a5-434c-a71b-0f8cc1bed5fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def entering_or_leaving_harbour(harbour: list, trips :pd.DataFrame, entering=True, initial_speed_separator=0.1, distance_limit = 0.0004, N = 5):\n",
+    "                        \n",
+    "        \n",
+    "    latitude = harbour[0]\n",
+    "    longitude = harbour[1]\n",
+    "    \n",
+    "    distance = np.sqrt((trips.latitude - latitude)**2 + (trips.longitude - longitude)**2)\n",
+    "    sog = trips['sog']\n",
+    "\n",
+    "    # Matrix with data shifted forward in time in the rows\n",
+    "    if N > 1:\n",
+    "        M = np.concatenate([[np.roll(distance,-i)] for i in range(N,1,-1)])\n",
+    "        average_previous_distance = M.mean(axis=0)\n",
+    "    else:\n",
+    "        average_previous_distance = np.roll(distance,-1)\n",
+    "        \n",
+    "    # If the ship is within the distance_limit of the harbour \n",
+    "    # and the mean distance from the N previous time steps is larger, \n",
+    "    # this is an entering harbour event.\n",
+    "    \n",
+    "    if entering:\n",
+    "        # Entering:\n",
+    "        mask = ((distance >= distance_limit) & (average_previous_distance < distance_limit))\n",
+    "    else:\n",
+    "        # Leaving:\n",
+    "        mask = ((distance <= distance_limit) & (average_previous_distance > distance_limit))\n",
+    "    \n",
+    "    events = trips.loc[mask]\n",
+    "    return events\n",
+    "        \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc937361-5635-4629-a4fe-71340473a0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_limit = 0.0006\n",
+    "entering_harbour1 = entering_or_leaving_harbour(harbour=harbours['Norgersund'], trips=trips, entering=True, distance_limit=distance_limit, N=1)\n",
+    "leaving_harbour1 = entering_or_leaving_harbour(harbour=harbours['Norgersund'], trips=trips, entering=False, distance_limit=distance_limit, N=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e41a0b6-3479-4508-aa1d-a4aae7c7bf0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_limit = 0.0006\n",
+    "entering_harbour2 = entering_or_leaving_harbour(harbour=harbours['Hanö'], trips=trips, entering=True, distance_limit=distance_limit, N=1)\n",
+    "leaving_harbour2 = entering_or_leaving_harbour(harbour=harbours['Hanö'], trips=trips, entering=False, distance_limit=distance_limit, N=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f6df623-8835-4a1a-babc-bb345894742a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "entering_harbour1.plot(y='sog', style='r^', label='entering Norgersund', ax=ax)\n",
+    "leaving_harbour1.plot(y='sog', style='go', label='leaving Norgersund', ax=ax)\n",
+    "\n",
+    "entering_harbour2.plot(y='sog', style='rv', label='entering Hanö', ax=ax)\n",
+    "leaving_harbour2.plot(y='sog', style='gs', label='leaving Hanö', ax=ax)\n",
+    "\n",
+    "trips.plot(y='sog', style='.-', label='sog', ax=ax, zorder=-10)\n",
+    "ax.set_xlim('2022-05-01','2022-05-02')\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b32794-9100-430c-8ff6-3075e2fe190e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = trips['sog'] > 0.1\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "entering_harbour1.plot(y='sog', style='r^', label='entering Norgersund', ax=ax)\n",
+    "leaving_harbour1.plot(y='sog', style='go', label='leaving Norgersund', ax=ax)\n",
+    "\n",
+    "entering_harbour2.plot(y='sog', style='rv', label='entering Hanö', ax=ax)\n",
+    "leaving_harbour2.plot(y='sog', style='gs', label='leaving Hanö', ax=ax)\n",
+    "\n",
+    "trips.loc[mask].plot(y='sog', style='.-', label='sog', ax=ax, zorder=-10)\n",
+    "ax.set_xlim('2022-05-01','2022-05-02')\n",
+    "ax.legend()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe1bf677-e10d-4784-b54d-138c86a6a721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "df_clean.plot(x='start_time', y='sog', style='go', label='trip start', ax=ax)\n",
+    "df_clean.plot(x='end_time', y='sog', style='r^', label='trip end', ax=ax)\n",
+    "trips.plot(y='sog', style='.-', label='sog', ax=ax, zorder=-10)\n",
+    "ax.set_xlim('2022-05-01','2022-05-02')\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e14571d-e866-4a54-9a6f-2650f035bf8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10574991-14ac-48a5-b351-645cbfb44012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask.idxmax()"
    ]
   },
   {
