improved the pipeline a bit.

--- a/docs/vitaskär/07.04_vitaskär_savings.ipynb
+++ b/docs/vitaskär/07.04_vitaskär_savings.ipynb
@@ -323,8 +323,164 @@
    "outputs": [],
    "source": [
     "trips = catalog.load(\"vitaskar.data_with_trip_columns\")\n",
+    "mask = trips['trip_no'].isin(df_clean.index)\n",
+    "trips = trips.loc[mask].copy()\n",
+    "trips.sort_index(inplace=True)\n",
+    "trips['time'] = (trips.index - trips.index[0]).total_seconds()\n",
     "harbours = catalog.load(\"params:vitaskar.harbours\")\n",
     "initial_speed_separator = catalog.load(\"params:initial_speed_separator\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff25a2c-412f-4eb7-8508-e3c359c0f7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = trips.index > utbildning\n",
+    "efter_utbildning = trips.loc[mask]\n",
+    "\n",
+    "mask = trips.index <= utbildning\n",
+    "före_utbildning = trips.loc[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a58e616-a6a5-46b8-a3cd-3397385692f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_efter_utbildning = scipy.integrate.trapz(efter_utbildning['sog'], efter_utbildning['time'])\n",
+    "distance_efter_utbildning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53ec37e7-41c6-47e3-aeb5-c82abbc2d5aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_efter_utbildning = scipy.integrate.trapz(efter_utbildning['consumption']/3600, efter_utbildning['time'])\n",
+    "consumption_efter_utbildning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c8e5a3-c653-49ad-8a7b-845d64a112f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_före_utbildning = scipy.integrate.trapz(före_utbildning['sog'], före_utbildning['time'])\n",
+    "distance_före_utbildning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58960af4-f14a-4a13-a006-a068c409294c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_före_utbildning = scipy.integrate.trapz(före_utbildning['consumption']/3600, dx=15)\n",
+    "consumption_före_utbildning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f87e16-377a-4cec-8a74-ce3444b3a66f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_före_utbildning = scipy.integrate.trapz(före_utbildning['consumption']/3600, före_utbildning['time'])\n",
+    "consumption_före_utbildning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "594c55e0-f0ad-4279-a4b1-0b07287d2c14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "före_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['consumption']/3600, x['time'])).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429c5ce8-f782-452e-ad05-790b526401e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "före_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['consumption']/3600, dx=15)).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19cf834d-f820-4db1-a9b6-8adf7b7c1f0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_före_utbildning / distance_före_utbildning*1852"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da404e7-efe5-4a65-b1c1-f6d0d135a864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_efter_utbildning / distance_efter_utbildning*1852"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47a12394-b09a-4255-afbd-3950c746085c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_trips_före = len(före_utbildning['trip_no'].unique())\n",
+    "number_of_trips_efter = len(efter_utbildning['trip_no'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "381dec19-75ba-4541-a5be-c0451b8b7abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_per_trip_före = consumption_före_utbildning/number_of_trips_före\n",
+    "consumption_per_trip_före"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f14b5b3e-7d68-4db8-8181-1e4afb25dc81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consumption_per_trip_efter = consumption_efter_utbildning/number_of_trips_efter\n",
+    "consumption_per_trip_efter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd4d49f7-0ef5-4d0e-899a-112e34195be3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(consumption_per_trip_före - consumption_per_trip_efter)/consumption_per_trip_före"
    ]
   },
   {
@@ -484,16 +640,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cef6ca9-190f-4c12-82e7-db94362b7224",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trips['time'].diff().plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b64e8bcc-b3ed-4f3f-b642-3f36c6be40b9",
    "metadata": {},
    "outputs": [],
@@ -573,7 +719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trip = trips.groupby(by='trip_no').get_group(100)\n",
+    "trip = trips.groupby(by='trip_no').get_group(10)\n",
     "plot_map(trip, zoom_start=13)"
    ]
   },
@@ -607,44 +753,6 @@
     "distance_limit = 0.0004\n",
     "mask = trips['distance to Norgersund'] < distance_limit\n",
     "plot_trips(trips.loc[mask])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08756c95-3a32-418f-997a-d80f2b8a460b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.roll(distance, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a867da0f-03df-418a-85d2-3e937cb144ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b072c9c4-a277-4d2e-9257-c66835a1586c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66507634-1a0b-45bc-b908-44c6fd5a689e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance"
    ]
   },
   {
@@ -772,13 +880,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4f5e5373-111f-41f1-be6e-70ef1c5e131f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(trips.iloc[1000:2000],y='sog')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fe1bf677-e10d-4784-b54d-138c86a6a721",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig,ax=plt.subplots()\n",
-    "df_clean.plot(x='start_time', y='sog', style='go', label='trip start', ax=ax)\n",
-    "df_clean.plot(x='end_time', y='sog', style='r^', label='trip end', ax=ax)\n",
+    "\n",
+    "ax.plot(df_clean['start_time'], trips.loc[df_clean['start_time'],'sog'], 'go', label='trip start')\n",
+    "ax.plot(df_clean['end_time'], trips.loc[df_clean['end_time'],'sog'], 'r^', label='trip end')\n",
+    "\n",
+    "\n",
     "trips.plot(y='sog', style='.-', label='sog', ax=ax, zorder=-10)\n",
     "ax.set_xlim('2022-05-01','2022-05-02')\n",
     "ax.legend()"
@@ -807,6 +928,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a0116ac-ba2d-4aa0-806d-7e01886153fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = trips.index > utbildning\n",
+    "efter_utbildning = trips.loc[mask]\n",
+    "\n",
+    "mask = trips.index <= utbildning\n",
+    "före_utbildning = trips.loc[mask]\n",
+    "\n",
+    "\n",
+    "trip_id = efter_utbildning.groupby(by='trip_no').apply(lambda x : x['time'].diff().max()).idxmax()\n",
+    "trip = efter_utbildning.groupby(by='trip_no').get_group(trip_id)\n",
+    "trip.plot(y='sog', style='.-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f51eb2-ef3f-4575-83f6-eb187cddb203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(efter_utbildning.groupby(by='trip_no').apply(lambda x : x['time'].diff().max()) > 15).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50c37cc1-6d69-4946-bfc2-37ed2f560d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(efter_utbildning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db33a4aa-b227-4b7b-983a-7a576aa217c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances = efter_utbildning.groupby(by='trip_no').apply(lambda x: scipy.integrate.simps(y=x['sog'], x=x['time']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d770d101-4515-4629-9737-59cf2d8744be",
    "metadata": {
     "tags": [
@@ -820,6 +990,17 @@
     "df_compare = df_.groupby(by='period', sort=False).mean()[interesting]\n",
     "table = df_compare.style.format(precision=2)\n",
     "glue(\"periods\", table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de76c40f-9a7c-4fa6-8218-7a5d12c1028e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = df_.groupby(by='period', sort=False).sum()\n",
+    "sum['consumption']/sum['distance']*1852"
    ]
   },
   {
@@ -907,7 +1088,7 @@
     "    bins = np.linspace(df_[key].min(), df_[key].max(), 100)\n",
     "    \n",
     "    for direction, df_direction in df_.groupby(by='trip_direction', sort=False):\n",
-    "        grid = sns.displot(df_direction, x=key, kind='kde', hue='period', common_norm=False, bw_adjust=0.5);\n",
+    "        grid = sns.displot(df_direction, x=key, kind='kde', hue='period', common_norm=False, bw_adjust=0.2);\n",
     "        fig = grid.figure\n",
     "        fig.suptitle(direction)\n",
     "        \n",
@@ -919,6 +1100,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5e295dc6-ebda-4f48-9ce3-19c90061e306",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean.plot(x='sog',y='consumption', style='o', ms=20, alpha=0.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cfe55ff-9ff9-45dd-b5a4-5a796216a3b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean.plot(x='distance',y='consumption', style='o', ms=20, alpha=0.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "844cd829-eb2c-4b4e-905e-bd338d02ab61",
    "metadata": {},
    "outputs": [],
    "source": []
