Major rework of how the trips are devided.

--- a/docs/ventrafiken/07.04_uraniborg_savings.ipynb
+++ b/docs/ventrafiken/07.04_uraniborg_savings.ipynb
@@ -47,10 +47,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import seaborn as sns\n",
-    "width=20\n",
-    "height=3\n",
-    "plt.rcParams[\"figure.figsize\"] = (width,height)\n",
-    "sns.set(rc={'figure.figsize':(width,height)})\n",
+    "#width=20\n",
+    "#height=3\n",
+    "#plt.rcParams[\"figure.figsize\"] = (width,height)\n",
+    "#sns.set(rc={'figure.figsize':(width,height)})\n",
     "\n",
     "#import seaborn as sns\n",
     "import os\n",
@@ -136,7 +136,17 @@
    },
    "outputs": [],
    "source": [
-    "#df_stat.info()"
+    "df_stat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77aeda90-f6b9-4e93-80ff-514224da131b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stat['thrust_factor'].unique()"
    ]
   },
   {
@@ -978,6 +988,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1cab6608-44c3-4bcc-be21-a4b86a3cddb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "83aae001-973d-4b54-b8b3-3e5c1d5bcc75",
    "metadata": {},
    "outputs": [],
@@ -992,7 +1012,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_direction.plot(x=\"thrust_factor\", y=\"consumption\", alpha=0.1, style='.')"
+    "with plt.style.context('paper'):\n",
+    "    \n",
+    "    fig,ax=plt.subplots()\n",
+    "    \n",
+    "    sns.regplot(data=df_direction, x='thrust_factor', y='consumption', line_kws={\"color\": \"C1\"})\n",
+    "    ax.set_ylabel('Fuel consumption [l/trip]')\n",
+    "    ax.set_xlabel(r'aft thruster ratio: $\\frac{C_{aft}}{C_{aft} +C_{fwd}}$')\n",
+    "    \n",
+    "    \n",
+    "    ax.annotate('50\\%-50\\% \\n aft-fwd thruster', (0.5,65), \n",
+    "                xytext=(0.52,45), \n",
+    "                arrowprops=dict(arrowstyle=\"->\"), horizontalalignment='center', verticalalignment='top')\n",
+    "    \n",
+    "    ax.annotate('90\\%-10\\% \\n aft-fwd thruster', (0.90,32), \n",
+    "                xytext=(0.9,60), \n",
+    "                arrowprops=dict(arrowstyle=\"->\"), horizontalalignment='center', verticalalignment='top')\n",
+    "    \n",
+    "    ax.set_xlim(0.45,0.95)\n",
+    "    \n",
+    "    fig.savefig('correlation.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "927fa286-16c8-415f-8604-a4c8571ca23a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbda835c-04f7-458d-b30a-4af7b9257380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction.corr().loc['thrust_factor','consumption']"
    ]
   },
   {
@@ -1009,6 +1066,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11619bdb-9f91-4234-80f2-a744a6160c38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f533765-c6ba-4000-8c6a-1f78679e9617",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d92dd8ea-9069-4f8b-bf86-750e41300aca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc54b28-4380-44f6-badc-889c7b85bfdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cf173ab-90ed-4160-a8cb-2c2d1b00d160",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5fef47-fb8b-45e6-b6a7-68650462997b",
    "metadata": {},
    "outputs": [],
    "source": []
