--- a/docs/vitaskär/07.04_vitaskär_savings.ipynb
+++ b/docs/vitaskär/07.04_vitaskär_savings.ipynb
@@ -89,7 +89,9 @@
     "#plt.style.use('presentation')\n",
     "from IPython.display import display, Markdown, Latex\n",
     "import sympy as sp\n",
-    "from d2e2f.visualization.visualize import plot_map, plot_trips"
+    "from d2e2f.visualization.visualize import plot_map, plot_trips\n",
+    "import statsmodels.api as sm\n",
+    "import geopandas as gp"
    ]
   },
   {
@@ -348,76 +350,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a58e616-a6a5-46b8-a3cd-3397385692f4",
+   "id": "594c55e0-f0ad-4279-a4b1-0b07287d2c14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance_efter_utbildning = scipy.integrate.trapz(efter_utbildning['sog'], efter_utbildning['time'])\n",
-    "distance_efter_utbildning"
+    "consumption_före_utbildning = före_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['consumption']/3600, x['time'])).sum()\n",
+    "consumption_före_utbildning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53ec37e7-41c6-47e3-aeb5-c82abbc2d5aa",
+   "id": "77519ffa-a4c2-4bec-a10f-71edd074c1ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumption_efter_utbildning = scipy.integrate.trapz(efter_utbildning['consumption']/3600, efter_utbildning['time'])\n",
+    "consumption_efter_utbildning = efter_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['consumption']/3600, x['time'])).sum()\n",
     "consumption_efter_utbildning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5c8e5a3-c653-49ad-8a7b-845d64a112f6",
+   "id": "5f39e3f9-6cae-487c-973f-d609ec988f71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance_före_utbildning = scipy.integrate.trapz(före_utbildning['sog'], före_utbildning['time'])\n",
+    "distance_före_utbildning = före_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['sog'], x['time'])).sum()\n",
     "distance_före_utbildning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58960af4-f14a-4a13-a006-a068c409294c",
+   "id": "4cd947f3-5217-4b38-892a-4d8e43529fef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumption_före_utbildning = scipy.integrate.trapz(före_utbildning['consumption']/3600, dx=15)\n",
-    "consumption_före_utbildning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94f87e16-377a-4cec-8a74-ce3444b3a66f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumption_före_utbildning = scipy.integrate.trapz(före_utbildning['consumption']/3600, före_utbildning['time'])\n",
-    "consumption_före_utbildning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "594c55e0-f0ad-4279-a4b1-0b07287d2c14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "före_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['consumption']/3600, x['time'])).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "429c5ce8-f782-452e-ad05-790b526401e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "före_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['consumption']/3600, dx=15)).sum()"
+    "distance_efter_utbildning = efter_utbildning.groupby(by='trip_no').apply(lambda x : scipy.integrate.trapz(x['sog'], x['time'])).sum()\n",
+    "distance_efter_utbildning"
    ]
   },
   {
@@ -486,6 +457,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "468c0687-b5a7-4694-a464-5f5a026d3a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_före_utbildning/number_of_trips_före"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7af2958a-ceec-4363-afcb-1e7eef825eb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_efter_utbildning/number_of_trips_efter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3f01400-ca28-4830-921a-86e1c015c165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_.groupby(by='period').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5afbdf25-3d90-4317-af65-039587dc8d87",
    "metadata": {},
    "outputs": [],
@@ -513,7 +514,95 @@
    "outputs": [],
    "source": [
     "mask = trips['trip_no'].isin(trip_nos['efter utbildning'])\n",
-    "plot_trips(df=trips.loc[mask], zoom_start=12)"
+    "fig = plot_trips(df=trips.loc[mask], zoom_start=12)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c3d7ff5-750d-478c-a821-35d6c3082712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = trips['trip_no'].isin(trip_nos['efter utbildning'])\n",
+    "trips_efter_utbildning = trips.loc[mask]\n",
+    "\n",
+    "mask = trips['trip_no'].isin(trip_nos['tända skärmar'])\n",
+    "trips_före_utbildning = trips.loc[mask]\n",
+    "\n",
+    "for direction, df__ in trips_efter_utbildning.groupby(by='trip_direction', sort=False):\n",
+    "    fig,ax=plt.subplots()\n",
+    "    #sns.regplot(data=df__, x='trip_time', y='sog', original=20, line_kws={\"color\": \"C1\"}, ax=ax)\n",
+    "    df__.groupby('trip_time')['sog'].mean().plot(ax=ax)    \n",
+    "    df__.groupby('trip_time').quantile(0.05)['sog'].plot(ax=ax)    \n",
+    "    df__.groupby('trip_time').quantile(0.95)['sog'].plot(ax=ax) \n",
+    "    ax.set_title(direction)\n",
+    "\n",
+    "for direction, df__ in trips_före_utbildning.groupby(by='trip_direction', sort=False):\n",
+    "    fig,ax=plt.subplots()\n",
+    "    #sns.regplot(data=df__, x='trip_time', y='sog', original=20, line_kws={\"color\": \"C1\"}, ax=ax)\n",
+    "    df__.groupby('trip_time')['sog'].mean().plot(ax=ax)    \n",
+    "    df__.groupby('trip_time').quantile(0.05)['sog'].plot(ax=ax)    \n",
+    "    df__.groupby('trip_time').quantile(0.95)['sog'].plot(ax=ax) \n",
+    "    ax.set_title(direction)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a35ab256-1982-4de2-9b8e-9e0cdb673d2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = trips['trip_no'].isin(trip_nos['efter utbildning'])\n",
+    "trips_efter_utbildning = trips.loc[mask]\n",
+    "\n",
+    "mask = trips['trip_no'].isin(trip_nos['tända skärmar'])\n",
+    "trips_före_utbildning = trips.loc[mask]\n",
+    "\n",
+    "fig,axes=plt.subplots(ncols=2)\n",
+    "\n",
+    "for (direction, df__), ax in zip(trips_före_utbildning.groupby(by='trip_direction', sort=False), axes):\n",
+    "    df__.groupby('trip_time')['sog'].mean().plot(ax=ax, label='Före utbildning')    \n",
+    "    ax.set_title(direction)\n",
+    "    ax.legend()\n",
+    "\n",
+    "for (direction, df__), ax in zip(trips_efter_utbildning.groupby(by='trip_direction', sort=False), axes):\n",
+    "    df__.groupby('trip_time')['sog'].mean().plot(ax=ax, label='Efter utbildning')    \n",
+    "    ax.set_title(direction)\n",
+    "    ax.legend()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab2defc3-3f45-4036-8783-e5ddcd354353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = trips['trip_no'].isin(trip_nos['efter utbildning'])\n",
+    "trips_efter_utbildning = trips.loc[mask]\n",
+    "\n",
+    "mask = trips['trip_no'].isin(trip_nos['tända skärmar'])\n",
+    "trips_före_utbildning = trips.loc[mask]\n",
+    "\n",
+    "fig,axes=plt.subplots(ncols=2)\n",
+    "\n",
+    "for (direction, df__), ax in zip(trips_före_utbildning.groupby(by='trip_direction', sort=False), axes):\n",
+    "    \n",
+    "    df__.groupby('trip_time')['latitude','longitude'].mean().plot(x='longitude', y='latitude', ax=ax, label='Före utbildning')    \n",
+    "    \n",
+    "    ax.set_title(direction)\n",
+    "    ax.legend()\n",
+    "    ax.axis('equal')\n",
+    "\n",
+    "for (direction, df__), ax in zip(trips_efter_utbildning.groupby(by='trip_direction', sort=False), axes):\n",
+    "    df__.groupby('trip_time')['latitude','longitude'].mean().plot(x='longitude', y='latitude', ax=ax, label='Efter utbildning')    \n",
+    "    ax.set_title(direction)\n",
+    "    ax.legend()\n",
+    "    ax.axis('equal')"
    ]
   },
   {
@@ -715,11 +804,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56c78b64-9dc5-4d69-b9c3-4c8808de53b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trips['trip_no'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a4c657f9-d00f-4a57-b213-1263df7db888",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trip = trips.groupby(by='trip_no').get_group(10)\n",
+    "trip = trips.groupby(by='trip_no').get_group(8)\n",
     "plot_map(trip, zoom_start=13)"
    ]
   },
@@ -995,6 +1094,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5785fad-2ecc-4ccf-b260-2acdda8118f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "de76c40f-9a7c-4fa6-8218-7a5d12c1028e",
    "metadata": {},
    "outputs": [],
@@ -1103,23 +1210,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.plot(x='sog',y='consumption', style='o', ms=20, alpha=0.15)"
+    "interesting = ['distance','sog']\n",
+    "sns.pairplot(data=df_, x_vars=interesting, y_vars='consumption', kind='reg', plot_kws={'line_kws':{\"color\": \"C1\"},'order':2})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfe55ff-9ff9-45dd-b5a4-5a796216a3b0",
+   "id": "b30eb4ab-95d4-4322-9a78-6ad9540b4e29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.plot(x='distance',y='consumption', style='o', ms=20, alpha=0.15)"
+    "data = df_\n",
+    "y = data['consumption'].copy()\n",
+    "X = pd.DataFrame(index=data.index)\n",
+    "#X=data[['distance']].copy()\n",
+    "\n",
+    "#X = data[['distance']].copy()\n",
+    "X['distance'] = data['distance']\n",
+    "X['sog**2'] = data['sog']**2\n",
+    "X = sm.add_constant(X)\n",
+    "model = sm.OLS(y,X)\n",
+    "results = model.fit()\n",
+    "display(results.summary())\n",
+    "\n",
+    "result = pd.DataFrame(index=data.index)\n",
+    "result['y'] = y\n",
+    "\n",
+    "result['y_pred1'] = results.predict(X)\n",
+    "result['y_pred2'] = data['consumption'].mean()\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "result.plot(x='y', y=['y_pred1','y_pred2'], style='.', alpha=0.2, ax=ax)\n",
+    "ax.axis('equal')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844cd829-eb2c-4b4e-905e-bd338d02ab61",
+   "id": "6dbee58e-9c77-4f96-957d-d1947282e534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2_score(result['y'], result['y_pred1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe95a11f-a78d-48a6-918c-c1f920b47fad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2_score(result['y'], result['y_pred2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf1198c-8b92-4675-a2dd-6b65be4038de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df_.groupby(by='trip_direction', sort=False).get_group('Norgersund-Hanö')\n",
+    "y = data['consumption'].copy()\n",
+    "X = data[['distance']].copy()\n",
+    "X['sog**2'] = data['sog']**2\n",
+    "model = sm.OLS(y,X)\n",
+    "results = model.fit()\n",
+    "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e48c51a-da71-4934-9c3a-640533ace87a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df_.groupby(by='trip_direction', sort=False).get_group('Hanö-Norgersund')\n",
+    "y = data['consumption'].copy()\n",
+    "X = data[['distance']].copy()\n",
+    "X['sog**2'] = data['sog']**2\n",
+    "model = sm.OLS(y,X)\n",
+    "results = model.fit()\n",
+    "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcef1bc7-d5e8-4438-9cdb-24e0c3ae5006",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973e1950-c1b8-42db-a384-18fa56689670",
    "metadata": {},
    "outputs": [],
    "source": []
