--- a/notebooks/07.02_uraniborg.ipynb
+++ b/notebooks/07.02_uraniborg.ipynb
@@ -47,7 +47,10 @@
     "%autoreload 2\n",
     "\n",
     "from d2e2f.visualization.visualize import plot_map, plot_trips\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.width', 1000)"
    ]
   },
   {
@@ -202,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_map(trip)"
+    "plot_map(trip.iloc[0:100])"
    ]
   },
   {
@@ -211,7 +214,9 @@
    "id": "cc124ade-cb0c-476a-b38d-fb80507ddf54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trip.head()"
+   ]
   },
   {
    "cell_type": "markdown",
